# SimpleBundleAdjustment

./: .gitignore  BundleAdjustment2Viewes.cpp  BundleAdjustment2Viewes.hpp  CMakeLists.txt  LICENSE.txt  README.md  ba_example.cc
src/: BundleAdjustment2Viewes.cpp  BundleAdjustment2Viewes.hpp  misc.hpp
